update page and prints json response

--- a/src/Ajax-XMLHTTPRequest/index.html
+++ b/src/Ajax-XMLHTTPRequest/index.html
@@ -10,8 +10,13 @@
 </head>
 <body>
     <div class="container">
-        <a href="#" class="button" id="cargar">Cargar Posts</a>
-        <div id="listado"></div>
+        <button id="boton1">empleado</button>
+        <button id="boton2">empleados</button>
+        <h2>Empleado</h2>
+        <div id="empleado"></div>
+        <h2>Empleados</h2>
+        <div id="emplreados"></div>
+
         <script src="app.js"></script>
     </div>
 
