print a list of employes from json

--- a/src/Ajax-XMLHTTPRequest/index.html
+++ b/src/Ajax-XMLHTTPRequest/index.html
@@ -15,7 +15,7 @@
         <h2>Empleado</h2>
         <div id="empleado"></div>
         <h2>Empleados</h2>
-        <div id="emplreados"></div>
+        <div id="empleados"></div>
 
         <script src="app.js"></script>
     </div>
